# sntry-platform

sntry-agent-api/: .gitignore  README.md  activate.sh  docker-compose.yml  test_setup.py
sntry-agent-api/scripts/: start-dev.sh
sntry-agent-api/shared/: __init__.py  requirements.txt
sntry.ai/: .env.example  Makefile  README.md  docker-compose.yml  requirements.txt  test_agent_crud.py  test_runner.py  validate_auth_structure.py  validate_structure.py
sntry.ai/scripts/: init-db.py  migrate.py
sntry.ai/shared/: __init__.py  auth.py  config.py  database.py
sntry.data/: .env.example  .gitignore  ADDRESS_PARSING_DOCUMENTATION.md  DEDUPLICATION_DOCUMENTATION.md  Dockerfile  LIBPOSTAL_INSTALLATION.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
sntry.data/.kiro/specs/customer-360-sales-enablement/: design.md  requirements.md  tasks.md
sntry.data/.kiro/specs/jamaica-business-directory/: design.md  requirements.md  tasks.md
sntry.data/.kiro/steering/: model-drift.md  product.md  structure.md  tech.md
sntry.data/alembic/: env.py
sntry.data/alembic/versions/: 001_create_business_data_schema.py
sntry.data/app/: __init__.py  main.py
sntry.data/app/business_directory/: __init__.py  api.py  data_processing.py  export_api.py  export_service.py  geocoding.py  geocoding_logging.py  models.py  mymaps_service.py  repository.py  scheduled_export_service.py  schemas.py  tasks.py
sntry.data/app/business_directory/scraping/: __init__.py  anti_bot.py  base.py  findyello_scraper.py  legal_compliance.py  logging_utils.py  scraping_service.py  sentiment_analysis.py  social_media_scraper.py  unified_pipeline.py  workandjam_scraper.py
sntry.data/app/core/: alerting.py  celery_app.py  config.py  database.py  error_handlers.py  exceptions.py  health.py  health_api.py  kafka.py  middleware.py  monitoring_api.py  performance.py  redis.py  tasks.py  tasks_api.py
sntry.data/app/customer_360/: __init__.py  api.py  models.py  repository.py  schemas.py  tasks.py
sntry.data/config/: logging.py
sntry.data/init-scripts/: 01-init-postgres.sql
sntry.data/static/: index.html
sntry.data/static/js/: config.js  customer360.js  export.js  filters.js  leads.js  map.js
sntry.data/test_scripts/: README.md  demo_deduplication.py  test_address_parsing_standalone.py  test_address_parsing_unit.py  test_anti_bot.py  test_data_cleaning_standalone.py  test_deduplication_comprehensive.py  test_deduplication_fuzzy.py  test_deduplication_standalone.py  test_geocoding_service.py  test_legal_compliance.py  test_libpostal_integration.py  test_scraping.py  test_scraping_current.py  test_social_media_scraping.py  test_unified_pipeline.py
sntry.data/tests/: conftest.py  test_main.py
sntry.data/tests/business_directory/: __init__.py  test_data_processing.py  test_deduplication.py
sntry.data/tests/customer_360/: __init__.py
(+124 files in other folders)
